基于release-1.0.3-rc2修改适配大数据环境及容器化部署

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,4 @@ linkis-spring-cloud-services/linkis-service-gateway/target/
 linkis-spring-cloud-services/target/
 
 target/
+assembly-combined-package/docker/logs/*
