--- a/assembly-combined-package/assembly-combined/conf/linkis-mg-gateway.properties
+++ b/assembly-combined-package/assembly-combined/conf/linkis-mg-gateway.properties
@@ -33,3 +33,6 @@ wds.linkis.admin.user=hadoop
 #wds.linkis.admin.password=
 ##Spring
 spring.server.port=9001
+#test
+wds.linkis.test.mode=true
+wds.linkis.test.user=hadoop
