--- a/assembly-combined-package/assembly-combined/conf/linkis-ps-publicservice.properties
+++ b/assembly-combined-package/assembly-combined/conf/linkis-ps-publicservice.properties
@@ -24,9 +24,10 @@ wds.linkis.server.mybatis.BasePackage=org.apache.linkis.jobhistory.dao,org.apach
 wds.linkis.workspace.filesystem.hdfsuserrootpath.suffix=/
 wds.linkis.server.component.exclude.classes=org.apache.linkis.entranceclient.conf.ClientForEntranceSpringConfiguration,org.apache.linkis.entranceclient.conf.ClientSpringConfiguration,org.apache.linkis.entrance.conf.EntranceSpringConfiguration
 ##hive meta
-hive.meta.url=
-hive.meta.user=
-hive.meta.password=
+hive.meta.url=jdbc:mysql://hive-metastore-mysql:53306/hive?useSSL=false
+hive.meta.user=root
+hive.meta.password=123456
+
 # associated with the logged-in user when querying metadata:default value is true
 #linkis.metadata.hive.permission.with-login-user-enabled
 
