--- a/assembly-combined-package/assembly-combined/conf/linkis.properties
+++ b/assembly-combined-package/assembly-combined/conf/linkis.properties
@@ -15,7 +15,9 @@
 
 #
 ##
-#wds.linkis.test.mode=true
+#test
+wds.linkis.test.mode=true
+wds.linkis.test.user=hadoop
 wds.linkis.server.version=v1
 ##spring conf
 wds.linkis.gateway.url=http://127.0.0.1:9001
