--- a/assembly-combined-package/assembly-combined/conf/application-linkis.yml
+++ b/assembly-combined-package/assembly-combined/conf/application-linkis.yml
@@ -16,7 +16,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:20303/eureka/
+      defaultZone: http://linkis-mg-eureka:20303/eureka/
 
 
 management:
